--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    def uploadServiceVersion = "3.4.2"
 
-}
+    implementation "net.gotev:uploadservice:$uploadServiceVersion"}
